--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "14.0.0",
     "express": "^4.18.2",
     "framer-motion": "^10.16.4",
+    "mongodb": "^6.2.0",
     "next": "14.0.0",
     "prettier": "^3.0.3",
     "react": "18.2.0",
