--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.2.2",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/yup": "^0.32.0"
