--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "typescript": "5.2.2",
     "yup": "^1.3.2",
     "zustand": "^4.4.6"
